# lkRay

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  lkRay.sln
Data/Scenes/: balls.json  bunny.json  emptyplane.json  glass.json  glass_test.json  mirrors.json  plane.json  room.json  test.json
gtest/: gtest.vcxproj
lkRay/: CMakeLists.txt  Constants.cpp  Constants.hpp  Main.cpp  PCH.cpp  PCH.hpp  Prerequisites.hpp  Types.hpp  lkRay.vcxproj  lkRay.vcxproj.filters
lkRay/Common/: Library.cpp  Library.hpp  Logger.cpp  Logger.hpp  Util.cpp  Util.hpp  Window.cpp  Window.hpp
lkRay/Distribution/: Emissive.cpp  Emissive.hpp  Function.cpp  Function.hpp  Lambertian.cpp  Lambertian.hpp  SpecularReflection.cpp  SpecularReflection.hpp  SurfaceDistribution.cpp  SurfaceDistribution.hpp  Transmission.cpp  Transmission.hpp
lkRay/Geometry/: AABB.cpp  AABB.hpp  Mesh.cpp  Mesh.hpp  Plane.cpp  Plane.hpp  Primitive.cpp  Primitive.hpp  Ray.cpp  Ray.hpp  Sphere.cpp  Sphere.hpp  Triangle.cpp  Triangle.hpp  UV.cpp  UV.hpp  Vertex.cpp  Vertex.hpp
lkRay/Light/: DirLight.cpp  DirLight.hpp  Light.cpp  Light.hpp  PointLight.cpp  PointLight.hpp  SpotLight.cpp  SpotLight.hpp
lkRay/Material/: Distribution.cpp  Distribution.hpp  Emissive.cpp  Emissive.hpp  Glass.cpp  Glass.hpp  LambertianDistribution.cpp  LambertianDistribution.hpp  Material.cpp  Material.hpp  Matte.cpp  Matte.hpp  Mirror.cpp  Mirror.hpp  SpecularReflection.cpp  SpecularReflection.hpp  SurfaceDistribution.cpp  SurfaceDistribution.hpp
lkRay/Math/: Vector.cpp  Vector.hpp
lkRay/Renderer/: PathContext.cpp  PathContext.hpp  RayCollision.cpp  RayCollision.hpp  Renderer.cpp  Renderer.hpp  SurfaceDistribution.cpp  SurfaceDistribution.hpp  ThreadData.cpp  ThreadData.hpp
lkRay/Scene/: BVH.cpp  BVH.hpp  BVHImpl.hpp  Camera.cpp  Camera.hpp  Containers.cpp  Containers.hpp  DirLight.cpp  DirLight.hpp  Light.cpp  Light.hpp  Material.cpp  Material.hpp  PointLight.cpp  PointLight.hpp  RayCollision.cpp  RayCollision.hpp  Scene.cpp  Scene.hpp
lkRayTest/: CMakeLists.txt  lkRayTest.vcxproj  lkRayTest.vcxproj.filters
lkRayTest/Tests/: VectorTest.cpp
