CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

PROJECT(lkRay)

INCLUDE(FindPkgConfig)

# assume Release build
IF(NOT DEFINED BUILD_TYPE)
    SET(CMAKE_BUILD_TYPE "Release")
ELSE(NOT DEFINED BUILD_TYPE)
    SET(CMAKE_BUILD_TYPE ${BUILD_TYPE})
ENDIF(NOT DEFINED BUILD_TYPE)

MESSAGE(STATUS "lkRay build type: ${CMAKE_BUILD_TYPE}")


ADD_DEFINITIONS(-std=c++1y -msse4.1)

IF("${CMAKE_BUILD_TYPE}" STREQUAL "Debug")
    ADD_DEFINITIONS(-O0 -ggdb -D_DEBUG)
ELSE("${CMAKE_BUILD_TYPE}" STREQUAL "Debug")
    ADD_DEFINITIONS(-O2)
ENDIF("${CMAKE_BUILD_TYPE}" STREQUAL "Debug")


SET(LKRAY_ROOT_DIRECTORY ${CMAKE_SOURCE_DIR})
SET(LKRAY_OUTPUT_DIRECTORY ${LKRAY_ROOT_DIRECTORY}/bin/${CMAKE_BUILD_TYPE})


SET(LKRAY_TARGET lkRay)


MACRO(LKRAY_COPY_RESULT TARGET)
    ADD_CUSTOM_COMMAND(TARGET ${TARGET} POST_BUILD COMMAND
                       ${CMAKE_COMMAND} -E copy $<TARGET_FILE:${TARGET}> ${LKRAY_OUTPUT_DIRECTORY})
ENDMACRO(LKRAY_COPY_RESULT)


ADD_SUBDIRECTORY(Deps)
ADD_SUBDIRECTORY(lkRay)


FILE(MAKE_DIRECTORY ${LKRAY_OUTPUT_DIRECTORY})
