CMAKE_MINIMUM_REQUIRED(VERSION 3.12)

PROJECT(lkRay)

INCLUDE(FindPkgConfig)

GET_PROPERTY(LKRAY_IS_MULTI_CONFIG GLOBAL PROPERTY GENERATOR_IS_MULTI_CONFIG)

IF(NOT DEFINED LKRAY_BUILD_PLATFORM)
    IF(WIN32)
        SET(LKRAY_BUILD_PLATFORM ${CMAKE_GENERATOR_PLATFORM})
    ELSEIF(UNIX)
        EXECUTE_PROCESS(COMMAND uname -m
            OUTPUT_VARIABLE LKRAY_BUILD_PLATFORM OUTPUT_STRIP_TRAILING_WHITESPACE
        )
    ELSE(WIN32)
        MESSAGE(FATAL_ERROR "Unsupported build platform")
    ENDIF(WIN32)
ENDIF(NOT DEFINED LKRAY_BUILD_PLATFORM)

IF(LKRAY_IS_MULTI_CONFIG)
    SET(LKRAY_GENERATOR_TYPE_STR "multi-config")
ELSE(LKRAY_IS_MULTI_CONFIG)
    SET(LKRAY_GENERATOR_TYPE_STR "single-config")
ENDIF(LKRAY_IS_MULTI_CONFIG)

SET(LKRAY_ROOT_DIRECTORY ${CMAKE_SOURCE_DIR})

IF(LKRAY_IS_MULTI_CONFIG)
    SET(LKRAY_OUTPUT_DIRECTORY_DEBUG ${LKRAY_ROOT_DIRECTORY}/bin/${LKRAY_BUILD_PLATFORM}/Debug)
    SET(LKRAY_OUTPUT_DIRECTORY_RELEASE ${LKRAY_ROOT_DIRECTORY}/bin/${LKRAY_BUILD_PLATFORM}/Release)
ELSE(LKRAY_IS_MULTI_CONFIG)
    SET(LKRAY_OUTPUT_DIRECTORY ${LKRAY_ROOT_DIRECTORY}/bin/${LKRAY_BUILD_PLATFORM}/${CMAKE_BUILD_TYPE})
ENDIF(LKRAY_IS_MULTI_CONFIG)


SET(LKRAY_TARGET lkRay)


MESSAGE(STATUS "lkRay build type: ${CMAKE_BUILD_TYPE}")
MESSAGE(STATUS "Generator is ${LKRAY_GENERATOR_TYPE_STR}")
IF(LKRAY_IS_MULTI_CONFIG)
    MESSAGE(STATUS " -> Debug output path is ${LKRAY_OUTPUT_DIRECTORY_DEBUG}")
    MESSAGE(STATUS " -> Release output path is ${LKRAY_OUTPUT_DIRECTORY_RELEASE}")
ELSE(LKRAY_IS_MULTI_CONFIG)
    MESSAGE(STATUS " -> Output path is ${LKRAY_OUTPUT_DIRECTORY}")
ENDIF(LKRAY_IS_MULTI_CONFIG)


ADD_SUBDIRECTORY(Deps)


IF(LKRAY_IS_MULTI_CONFIG)
    SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG ${LKRAY_OUTPUT_DIRECTORY_DEBUG})
    SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${LKRAY_OUTPUT_DIRECTORY_RELEASE})
    SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY_DEBUG ${LKRAY_OUTPUT_DIRECTORY_DEBUG})
    SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELEASE ${LKRAY_OUTPUT_DIRECTORY_RELEASE})

    FILE(MAKE_DIRECTORY ${LKRAY_OUTPUT_DIRECTORY_DEBUG})
    FILE(MAKE_DIRECTORY ${LKRAY_OUTPUT_DIRECTORY_RELEASE})
ELSE(LKRAY_IS_MULTI_CONFIG)
    SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${LKRAY_OUTPUT_DIRECTORY})
    SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${LKRAY_OUTPUT_DIRECTORY})

    FILE(MAKE_DIRECTORY ${LKRAY_OUTPUT_DIRECTORY})
ENDIF(LKRAY_IS_MULTI_CONFIG)


ADD_SUBDIRECTORY(lkRay)
